<resources>
    <string name="app_name">SmartGallery-Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="login_label">Login</string>
    <string name="registration_label">Registration</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="listing_title">Title</string>
    <string name="listing_year">Year Created:</string>
    <string name="listing_price">Price:</string>
    <string name="listing_style">Style:</string>
    <string name="listing_height">Height:</string>
    <string name="listing_width">Width:</string>
    <string name="listing_weight">Weight:</string>
    <string name="listing_sold">Sold:</string>
    <string name="listing_payment">PaymentMethod</string>
    <string name="listing_delivery"> Delivery Method</string>

    <string name="listing_button">Purchase</string>

    <string name="welcome_message">Welcome to SmartGallery!</string>
    <string name="login_message">Log in below</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="register_message">Fill out the information below to create an account</string>
    <string name="or_register">Or, if you don\'t have an account yet:</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <string name="account_type">Account Type</string>
    <string name="type_artist">Artist</string>
    <string name="type_customer">Customer</string>
    <string name="payment_type">Default Payment</string>
    <string name="type_credit">Credit</string>
    <string name="type_paypal">Paypal</string>
    <string name="delivery_method">Delivery Method</string>
    <string name="type_pickup">Pickup</string>
    <string name="type_shipping">Delivery</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_success">You have been logged in!</string>
    <string name="login_warning">This username and password do not match</string>

    <string name="empty_username">Username cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="mismatched_password">Passwords do not match</string>
    <string name="short_password">Password must be at least 7 characters</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="empty_account_type">Please choose an account type</string>
    <string name="empty_payment_type">Please choose a payment type</string>
    <string name="empty_delivery_method">Please choose a delivery method</string>

    <string name="title_activity_registration">RegistrationActivity</string>
    <string-array name="account_types">
        <item>Artist</item>
        <item>Customer</item>
    </string-array>
    <string-array name="payment_types">
        <item>Credit</item>
        <item>Paypal</item>
    </string-array>
    <string-array name="delivery_methods">
        <item>Pickup</item>
        <item>Shipping</item>
    </string-array>

    <string name="registration_success">Congratulations on your new account!</string>
    <string name="registration_failure">Verify that your email is valid. Otherwise, this username or email is already in use.</string>

    <string name="upload_title">Upload Your Artwork</string>
    <string name="upload_name">Artwork Name</string>
    <string name="upload_year">Year (YYYY)</string>
    <string name="upload_price"> Price ($)</string>
    <string name="upload_style_name">Select Art Style</string>
    <string name="upload_height">Height (cm)</string>
    <string name="upload_weight">Weight (kg)</string>
    <string name="upload_width">Width (cm) </string>
    <string name="upload_image_link">Image Link</string>
    <string name="upload_button">Upload</string>
    <string name="upload_exit"> Exit</string>

    <string name="upload_error"></string>


    <string name="customer_profile_title">Customer Profile</string>
    <string name="customer_update_password_button">Update Password</string>
    <string name="customer_update_email_button">Update Email</string>
    <string name="customer_delete_account_button">Delete Account</string>

    <string name="artist_profile_title">Artist Profile</string>
    <string name="artist_update_password_button">Update Password</string>
    <string name="artist_update_email_button">Update Email</string>
    <string name="artist_delete_account_button">Delete Account</string>
    <string name="upload_artwork_button">Upload Artwork</string>
    <string name="customer_profile">Customer Profile</string>
    <string name="email">Email:</string>
    <string name="default_payment_method">Default Payment Method:</string>
    <string name="creation_date">Creation Date:</string>
    <string name="username">Username:</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="new_email">New Email</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="view_listing">View Listings</string>
    <string name="transaction_title">Transactions</string>
    <string name="transaction_created">Date:</string>
    <string name="view_transaction">View Transaction</string>
    <string name="log_out">Log Out</string>
    <string name="artists">Artists</string>


</resources>