<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="ca.mcgill.ecse321.smartgallery.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_viewCustomer"
            app:destination="@id/viewCustomer" />
        <action
            android:id="@+id/action_FirstFragment_to_uploadActivity"
            app:destination="@id/uploadActivity" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="ca.mcgill.ecse321.smartgallery.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <activity
        android:id="@+id/viewCustomer"
        android:name="ca.mcgill.ecse321.smartgallery.ViewCustomer"
        android:label="customer_profile"
        tools:layout="@layout/customer_profile" />
    <activity
        android:id="@+id/uploadActivity"
        android:name="ca.mcgill.ecse321.smartgallery.UploadActivity"
        android:label="upload_view"
        tools:layout="@layout/upload_view" />
    <activity
        android:id="@+id/LoginActivity"
        android:name="ca.mcgill.ecse321.smartgallery.LoginActivity"
        android:label="@string/login_label"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/RegistrationActivity"
        android:name="ca.mcgill.ecse321.smartgallery.RegistrationActivity"
        android:label="@string/registration_label"
        tools:layout="@layout/activity_registration" />
</navigation>